[package]
name = "minecraft_timer"
version = "0.1.0"
authors = ["Nelson Torres <ntorressm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2.0"
notify = "4.0.0"
regex = "1.3.9"
chrono = "0.4"
glib = "^0"

[dependencies.gtk]
version = "0.8.1"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]
